sites/all/themes/wedigbio/css/style.css
/* ... */
a.logo > img {
  display: block !important;
  transform: scale(.75);
  top: -56px;
  position: absolute;
  z-index: 900;
  left: -79px;
}

.page-header {
  font-family: 'Work Sans', sans-serif !important;
  color: #4f575c; /* was #8e9396 */
  text-align: center;
}

#end p {
  font-size: 12px;
  margin: 20px 0;
}

footer {
  background: #0e76bc;
  margin-bottom: 20px;
}

#footer-sitemap {
  font-weight: 800;
}

.front h2 {
  text-align: center;
  eclear: both;
  font-family: 'Work Sans', sans-serif !important;;
  color: #4f575c; /* was #8e9396 */
  font-weight: 300;
}

.region-home-third .block {
  position: relative;
}

.region-home-first .block, .region-home-second .block {
  position: relative;
  background: #e7ece6;
  padding: 5px;
  float: left;
}

/*.region-home-first .block { width: 48%; }*/
/*.region-home-second .block { width: 31.5%; }*/
/*.region-home-third .block { width: 31.5%; }*/
/* special */
#block-block-5 {
  width: 64%;
}

#block-block-1 {
  margin-top: 30px;
}

/* SERVER SPECIFIC */

.view-homepage-images .jcarousel-container {
  padding: 0 40px;
}

.view-homepage-images .jcarousel-container .jcarousel-item img {
  background: #fff;
  padding: 3px;
  width: 100%;
  height: 196px;
}

#block-views-event-list-homepage-block {
  width: 64%;
}

#block-block-5 {
  float: right;
  width: auto;
}

#block-block-5 img {
  margin: 0 0 0 10px;
  float: left;
}

#block-block-6 {
  margin-top: 30px;
}

#block-block-11 {
  border: 1px solid #CCCCCC;
  -moz-border-radius: 5px;
  -webkit-border-radius: 5px;
  border-radius: 5px;
  margin-right: 2px;
}

#block-block-13 {
  width: 300px;
  position: absolute;
  margin-top: -25em;
  padding: 15px 10px;
  height: auto;
  background: rgba(0, 0, 0, .7);
  color: #fff;
  text-shadow: 0 1px 0 rgba(0, 0, 0, 1);
  font: 16px/23px "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-weight: bold;
  left: 0;
}

/*Updates*/
.node-type-event-calendar .field-label {
  float: left;
  width: 250px;
  display: block;
  clear: both;
}

.node-type-event-calendar .field {
  margin-top: 10px;
  padding-top: 5px;
  border-top: 1px solid #eee;
}

/* Taxonomy / event field link lists: give each item its own spacing */
.node-type-event-calendar .field-type-taxonomy-term-reference .field-items,
.node-type-event-calendar .field-type-link-field .field-items,
.node-type-event-calendar .field-name-field-organizer-email .field-items {
  display: block;
  margin-top: 2px;
}

.node-type-event-calendar .field-type-taxonomy-term-reference .field-item,
.node-type-event-calendar .field-type-link-field .field-item,
.node-type-event-calendar .field-name-field-organizer-email .field-item {
  display: block;
  margin: 0 0 4px 0;
  padding: 0;
}

.node-type-event-calendar .field-type-taxonomy-term-reference .field-item a,
.node-type-event-calendar .field-type-link-field .field-item a,
.node-type-event-calendar .field-name-field-organizer-email .field-item a {
  display: inline-block;
  min-height: 24px;
  line-height: 1.4;
  padding: 2px 0;
}

.view-event-list-homepage .views-field {
  margin-left: 180px;
}

.view-event-list-homepage .views-field-title {
  display: block;
  width: 150px;
  float: left;
  font-weight: bold;
  margin-left: 0;
}

.view-event-list-homepage .views-field-name {
  font-style: italic;
}

.view-event-list-homepage .views-row {
  clear: left;
  margin-bottom: 5px;
  padding-bottom: 5px;
  border-bottom: 1px solid #fff;
}

/** Blocks **/
#block-block-7 {
  position: relative;
  overflow: hidden;
}

#block-block-7 iframe, #block-block-7 object, #block-block-7 embed {
  position: absolute;
  width: 100%;
  height: 100%;
}

#block-aggregator-category-1 h2 {
  font-size: 16px;
  margin: 0;
  padding: 0;
  font-weight: bold;
}

#block-aggregator-category-1 ul {
  margin: 0;
  padding: 0;
  border-top: 1px solid #fff;
  margin-top: 5px;
}

#block-aggregator-category-1 li {
  list-style: none;
  padding: 5px 0;
  margin: 0 0 5px 0;
  border-bottom: 1px solid #fff;
}

#block-aggregator-category-1 .more-link {
  margin-top: 10px;
  font-style: italic;
}

#block-aggregator-feed-1 h2 {
  font-size: 16px;
  margin: 0;
  padding: 0;
  font-weight: bold;
}

#block-aggregator-feed-1 ul {
  margin: 0;
  padding: 0;
  border-top: 1px solid #fff;
  margin-top: 5px;
}

#block-aggregator-feed-1 li {
  list-style: none;
  padding: 5px 0;
  margin: 0 0 5px 0;
  border-bottom: 1px solid #fff;
}

#block-aggregator-feed-1 .more-link {
  margin-top: 10px;
  font-style: italic;
}

#block-block-10 {
  width: 300px;
  position: absolute;
  margin-top: -49em;
  padding: 15px 10px;
  height: auto;
  background: rgba(0, 0, 0, .7);
  color: #fff;
  text-shadow: 0 1px 0 rgba(0, 0, 0, 1);
  font: 16px/23px "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-weight: bold;
  right: 0;
}

#block-block-10 a,
#block-block-10 a:visited,
#block-block-13 a,
#block-block-13 a:visited {
  color: #337ab7 !important;
  text-decoration: underline;
}

#block-block-10 a:hover,
#block-block-10 a:focus,
#block-block-13 a:hover,
#block-block-13 a:focus {
  color: #cfefff !important;
  text-decoration: underline;
}

/*.team-member-title { margin-top:-60px;z-index:100} */
.entity-profile2 .field-label {
  float: left;
  width: 250px;
  display: block;
  clear: both;
}

.entity-profile2 .field {
  margin-top: 10px;
  padding-top: 5px;
  border-top: 1px solid #eee;
}

.entity-profile2 .field-items {
  margin-left: 270px;
}

.node-type-event-calendar .field-items {
  margin-left: 270px;
}

/*Event Page Styles */
.view-clone-of-event-list .views-row {
  border-top: 1px solid #ddd;
  padding: 10px 0 20px 0;
}

.view-clone-of-event-list .views-field-event-calendar-date {
  font-style: italic;
  margin-bottom: 5px;
}

.view-clone-of-event-list .views-field-name {
  margin-left: 20px;
  margin-top: 10px;
}

.view-clone-of-event-list .views-field-country {
  margin-left: 20px;
}
/* ... */

